# nem-battery

./: .gitignore  CLAUDE.md  README.md  cluster-analysis.ipynb  pyproject.toml
frontend/: .env.local.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/batteries/[key]/daily/: route.ts
frontend/src/app/api/batteries/[key]/interval/: route.ts
frontend/src/app/api/batteries/[key]/monthly/: route.ts
frontend/src/app/api/batteries/[key]/oracle/: route.ts
frontend/src/app/api/batteries/[key]/stats/: route.ts
frontend/src/app/api/batteries/latest/: route.ts
frontend/src/app/api/batteries/summary/: route.ts
frontend/src/app/api/strategy/cluster-summary/: route.ts
frontend/src/app/api/strategy/points/: route.ts
frontend/src/app/api/strategy/points3d/: route.ts
frontend/src/app/battery/[key]/: page.tsx
frontend/src/app/strategy/: page.tsx
frontend/src/components/: battery-card.tsx  battery-grid.tsx  battery-sparkline.tsx  cluster-feature-heatmap.tsx  daily-revenue-chart.tsx  interval-chart.tsx  monthly-revenue-chart.tsx  oracle-chart.tsx  revenue-heatmap.tsx  revenue-ranking-chart.tsx  strategy-canvas.tsx  strategy-cluster-guide.tsx  strategy-map.tsx  strategy-method-note.tsx  strategy-scatter-2d.tsx
frontend/src/lib/: db.ts  known-batteries.generated.ts  strategy-sim.ts  strategy-types.ts  types.ts
nem_battery/: __init__.py  _client.py  _parser.py  _types.py  battery.py  cli.py  pipeline.py  strategy_map.py  stream.py  types.py
nem_battery/reports/: __init__.py  dispatch.py  nextday.py  scada.py  trading.py
tests/: test_nextday.py  test_pipeline_contract.py  test_strategy_map.py
